--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -42,22 +42,7 @@
 
             <Grid Grid.Column="0">
 
-                <StackPanel x:Name="LoadingPanel" 
-                            HorizontalAlignment="Center" 
-                            VerticalAlignment="Center">
-                    <ProgressBar Style="{StaticResource MaterialDesignCircularProgressBar}"
-                                 Value="0"
-                                 IsIndeterminate="True"
-                                 Width="30" Height="30"
-                                 Foreground="#217093"/>
-                    <TextBlock Text="Đang tải..." 
-                               Margin="0,10,0,0" 
-                               Foreground="#217093" 
-                               FontSize="12"
-                               HorizontalAlignment="Center"/>
-                </StackPanel>
-
-                <Grid x:Name="WebViewContainer" Opacity="0" Margin="0,-50,0,0">
+                <Grid x:Name="WebViewContainer">
                     <wv2:WebView2 x:Name="webView" 
                                   DefaultBackgroundColor="Transparent"
                                   Height="400"
@@ -69,7 +54,7 @@
                                 Panel.ZIndex="999"
                                 VerticalAlignment="Bottom"
                                 HorizontalAlignment="Center"
-                                Margin="0,0,0,70"/>
+                                Margin="0,0,0,55"/>
             </Grid>
 
             <Grid Grid.Column="1">
